<resources>
    <string name="app_name">Monowealth</string>
    <string name="balance">Balance</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="sort">Sort</string>
    <string name="settings">Settings</string>
    <string name="overview">Overview</string>
    <string name="goals">Goals</string>
    <string name="paycheck_plan">Paycheck Plan</string>
    <string name="subtract">Subtract</string>
    <string name="add">Add</string>
    <string name="expand">Expand</string>

    <string name="trans_name">Enter a name</string>
    <string name="trans_amount">Enter an amount</string>
    <string name="trans_category">Pick a category</string>
    <string name="trans_date">Pick a date</string>

    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="date">Date</string>

    <string name="confirm">Confirm</string>

    <string name="new_expenses">New Expenses</string>
    <string name="new_income">New Income</string>
    <string name="transaction">Transaction</string>

    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>

    <string name="new_category">New Category</string>

    <string name="third_party_licenses">Third Party Licenses</string>

    <string name="feedback">User Feedback</string>
    <string name="feedback_description">Press one of the buttons below to send a user feedback or an idea for a new feature.
        I will use it to improve the app.</string>
    <string name="new_feature">New Feature Request</string>

    <string name="week_to_week">Amount ($) Spent Per Week</string>

    <string name="location">Location</string>
    <string name="location_hint">Enter the location (Optional)</string>

    <string name="miscellaneous">Miscellaneous</string>
    <string name="budget">Budget</string>
    <string name="new_budget">New Budget</string>
    <string name="budget_name">Budget Name</string>
    <string name="max_amount">Max Amount</string>

    <string name="no_expense">There are no expenses for this month.</string>

    <string name="all_transaction">Monthly Income and Expenses</string>
    <string name="category_description">Monthly Spending by Category</string>

    <string name="edit_budget">Edit Budget</string>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="other_menu_items">
        <item>Paycheck Breakdown Calculator</item>
        <!-- <item>Make a Donation</item> -->
        <!-- <item>Watch an Ad</item> -->
        <item>Feature Request</item>
        <item>Third Party Licenses</item>
    </string-array>

    <string name="license_description">I just want to give credit to some amazing people who created the
        font and API that allow me to make this app come to fruition.
        \n\nP.S. I am required to do this anyways so here goes.

        \n\n<b>1. Quicksand by Andrew Paglinawan</b>
        \n\nCopyright &#169; 2018 Andrew Paglinawan with Reserved Font Name Quicksand.
        \n\nThis Font Software is licensed under the SIL Open Font License, Version 1.1.
        This license is copied below, and is also available with a FAQ at:
        \n\n<a href="https://scripts.sil.org/OFL">https://scripts.sil.org/OFL</a>
        \n\nTHE FONT SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
        EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO ANY WARRANTIES OF
        MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT
        OF COPYRIGHT, PATENT, TRADEMARK, OR OTHER RIGHT. IN NO EVENT SHALL THE
        COPYRIGHT HOLDER BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
        INCLUDING ANY GENERAL, SPECIAL, INDIRECT, INCIDENTAL, OR CONSEQUENTIAL
        DAMAGES, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
        FROM, OUT OF THE USE OR INABILITY TO USE THE FONT SOFTWARE OR FROM
        OTHER DEALINGS IN THE FONT SOFTWARE.

        \n\n<b>2. MPAndroidChart by Philipp Jahoda</b>
        \n\nCopyright &#169; 2018 Philipp Jahoda
        \n\nLicensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at
        \n\n<a href="http://www.apache.org/licenses/LICENSE-2.0">http://www.apache.org/licenses/LICENSE-2.0</a>
        \n\nUnless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.

        \n\n<b>3. Okio by Square, Inc</b>
        \n\nCopyright &#169; 2018 Square, Inc
        \n\nLicensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at
        \n\n<a href="http://www.apache.org/licenses/LICENSE-2.0">http://www.apache.org/licenses/LICENSE-2.0</a>
        \n\nUnless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
