<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/main_activity">

    <LinearLayout
        android:id="@+id/main_activity_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1.0"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2" />

        <com.monowealth.monowealth.MediumTextView
            android:id="@+id/main_activity_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white" />

        <ImageButton
            android:id="@+id/main_activity_settings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            app:srcCompat="@drawable/settings"
            android:scaleType="fitCenter"
            android:background="@color/transparent"
            android:contentDescription="@string/settings"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/main_activity_middle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        app:layout_constraintTop_toBottomOf="@id/main_activity_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </android.support.v7.widget.RecyclerView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton_subtract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:srcCompat="@drawable/subtract"
        android:layout_margin="20dp"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/floatingActionButton_add"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scaleType="fitCenter"
        app:backgroundTint="@color/white"
        android:contentDescription="@string/new_expenses"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:srcCompat="@drawable/add"
        android:layout_margin="20dp"
        app:layout_constraintStart_toEndOf="@id/floatingActionButton_subtract"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scaleType="fitCenter"
        app:backgroundTint="@color/white"
        android:contentDescription="@string/new_income"/>

</android.support.constraint.ConstraintLayout>