<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeedbackFragment"
    android:background="@color/charcoal"
    android:clickable="true"
    android:focusable="true">

    <com.monowealth.monowealth.MediumTextView
        android:id="@+id/fragment_feedback_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback"
        android:background="@color/transparent"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.monowealth.monowealth.RegularTextView
        android:id="@+id/fragment_feedback_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback_description"
        android:background="@color/transparent"
        android:gravity="top|center"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/fragment_feedback_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/fragment_feedback_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1.0"
        android:orientation="horizontal"
        android:background="@color/transparent"
        app:layout_constraintTop_toBottomOf="@id/fragment_feedback_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <com.monowealth.monowealth.RegularButton
            android:id="@+id/fragment_feedback_user_feedback"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.45"
            android:text="@string/feedback"
            android:background="@drawable/rounded_corner"
            android:gravity="center"
            android:textColor="@color/black"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1" />

        <com.monowealth.monowealth.RegularButton
            android:id="@+id/fragment_feedback_new_feature"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.45"
            android:text="@string/new_feature"
            android:background="@drawable/rounded_corner"
            android:gravity="center"
            android:textColor="@color/black"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>