<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/adapter_budget_transaction_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/modified_black"
    app:cardElevation="0dp"
    android:layout_marginBottom="12dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    tools:context=".CategoryTransactionAdapter"
    android:clickable="true"
    android:focusable="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.monowealth.monowealth.RegularTextView
            android:id="@+id/adapter_budget_transaction_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/transparent"
            android:textColor="@color/white"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.monowealth.monowealth.RegularTextView
            android:id="@+id/adapter_budget_transaction_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/transparent"
            android:textColor="@color/salmon"
            app:layout_constraintTop_toBottomOf="@id/adapter_budget_transaction_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ProgressBar
            android:id="@+id/adapter_budget_transaction_progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:max="100"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            app:layout_constraintTop_toBottomOf="@id/adapter_budget_transaction_total"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:progress="50"/>

        <LinearLayout
            android:id="@+id/adapter_budget_transaction_description_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1.0"
            app:layout_constraintTop_toBottomOf="@id/adapter_budget_transaction_progress_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/black">

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.03" />

            <com.monowealth.monowealth.RegularTextView
                android:id="@+id/adapter_budget_transaction_date"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.27"
                android:text="@string/date"
                android:gravity="start|center"
                android:background="@color/transparent"
                android:textColor="@color/white"/>

            <com.monowealth.monowealth.RegularTextView
                android:id="@+id/adapter_budget_transaction_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.45"
                android:text="@string/name"
                android:gravity="start|center"
                android:background="@color/transparent"
                android:textColor="@color/white"/>

            <com.monowealth.monowealth.RegularTextView
                android:id="@+id/adapter_budget_transaction_amount"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.22"
                android:text="@string/amount"
                android:gravity="start|center"
                android:background="@color/transparent"
                android:textColor="@color/white"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.03" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/adapter_budget_transaction_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/adapter_budget_transaction_description_layout" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>